@@ -1,5 +1,6 @@
 *Version 3.5.3*
 * Fix bug in Email Event Handler REST model where a Mailing List did not have the name or xid set
+* Fix bug in Email Event Handler where emails were being prepared for every inactive event even if they were not configured to be sent.
 
 *Version 3.5.2*
 * Improve performance for events by only preparing emails that will be sent.
